--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -7,30 +7,12 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
-
-    <LinearLayout
-        android:id="@+id/linear_layout_selection"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true" >
-        <TextView
-            android:id="@+id/label_current_selection"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/label_current_selection" />
-    	<TextView
-        	android:id="@+id/current_selection"
-        	android:layout_width="wrap_content"
-        	android:layout_height="wrap_content"
-        	android:text="@string/label_default_selection" />
-    </LinearLayout>
     
     <Button
         android:id="@+id/button_choose_horeca"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/linear_layout_selection"
+        android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         android:text="@string/button_choose_horeca" />
 
