--- a/res/layout/activity_plat.xml
+++ b/res/layout/activity_plat.xml
@@ -61,6 +61,16 @@
 	       		android:layout_height="wrap_content"
 	       		android:layout_alignParentRight="true" />
     	</RelativeLayout>
+    	<TextView
+    	    android:text="@string/plat_ingredients_label"
+    	    android:textIsSelectable="true"
+       		android:layout_width="wrap_content"
+       		android:layout_height="wrap_content" />
+    	<TextView
+    	    android:id="@+id/plat_ingredients"
+    	    android:textIsSelectable="true"
+       		android:layout_width="wrap_content"
+       		android:layout_height="wrap_content" />
 	</LinearLayout>
 
 </ScrollView>
