--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -16,5 +16,9 @@
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
+    
+    <style name="simple_text">
+  		<item name="android:textSize">20sp</item>
+	</style>
 
 </resources>
