--- a/res/layout/activity_plat.xml
+++ b/res/layout/activity_plat.xml
@@ -20,15 +20,20 @@
 	       		android:layout_width="wrap_content"
 	       		android:layout_height="wrap_content"
 	       		android:layout_alignParentLeft="true"
-	       		style="@style/simple_text" />
+	       		style="@style/title_text" />
 	    	<TextView
 	    	    android:id="@+id/plat_name"
 	    	    android:textIsSelectable="true"
 	       		android:layout_width="wrap_content"
 	       		android:layout_height="wrap_content"
 	       		android:layout_alignParentRight="true"
+	       		android:layout_below="@id/horeca_name"
 	       		style="@style/simple_text" />
     	</RelativeLayout>
+    	<View
+    	    android:layout_width="fill_parent"
+    		android:layout_height="2dip"
+    		android:background="#FF909090" />
     	<TextView
     	    android:id="@+id/plat_description_label"
     	    android:text="@string/plat_description_label"
