--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -20,5 +20,9 @@
     <style name="simple_text">
   		<item name="android:textSize">20sp</item>
 	</style>
+    
+    <style name="title_text">
+  		<item name="android:textSize">24sp</item>
+	</style>
 
 </resources>
