--- a/res/layout/presentation_view.xml
+++ b/res/layout/presentation_view.xml
@@ -7,6 +7,25 @@
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
 	    android:orientation="vertical" >
+    	<RelativeLayout
+    	    android:layout_width="fill_parent"
+    	    android:layout_height="wrap_content" >
+	    	<TextView
+	    	    android:id="@+id/horeca_numtel_label"
+	    	    android:text="@string/horeca_numtel_label"
+	    	    android:textIsSelectable="true"
+	       		android:layout_width="wrap_content"
+	       		android:layout_height="wrap_content"
+	       		android:layout_alignParentLeft="true"
+	       		style="@style/simple_text" />
+	    	<TextView
+	    	    android:id="@+id/horeca_numtel"
+	    	    android:textIsSelectable="true"
+	       		android:layout_width="wrap_content"
+	       		android:layout_height="wrap_content"
+	       		android:layout_toRightOf="@id/horeca_numtel_label"
+	       		style="@style/simple_text" />
+    	</RelativeLayout>
     	<TextView
     	    android:id="@+id/horeca_description_label"
     	    android:text="@string/horeca_description_label"
