--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -33,6 +33,16 @@
 	        android:layout_height="wrap_content"
 	        style="@style/simple_text" />
 	    <TextView
+	        android:text="@string/plattype_label"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        style="@style/simple_text" />
+	    <Spinner
+	        android:id="@+id/plattype"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        style="@style/simple_text" />
+	    <TextView
 	        android:text="@string/distance_max_label"
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
