--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -44,6 +44,22 @@
 	        android:layout_height="wrap_content"
 	        style="@style/simple_text" />
 	    <TextView
+	        android:text="@string/ingredient_label"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        style="@style/simple_text" />
+	    <EditText
+	        android:id="@+id/ingredient"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        style="@style/simple_text" />
+	    <TextView
+	        android:textIsSelectable="true"
+	        android:id="@+id/ingredient_error"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        style="@style/error_text" />
+	    <TextView
 	        android:text="@string/distance_max_label"
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
