--- a/res/layout/presentation_view.xml
+++ b/res/layout/presentation_view.xml
@@ -39,5 +39,11 @@
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		style="@style/simple_text" />
+    	<TextView
+    	    android:id="@+id/horeca_pricerange"
+    	    android:textIsSelectable="true"
+       		android:layout_width="wrap_content"
+       		android:layout_height="wrap_content"
+       		style="@style/simple_text" />
 	</LinearLayout>
 </ScrollView>
