--- a/res/layout/presentation_view.xml
+++ b/res/layout/presentation_view.xml
@@ -11,6 +11,25 @@
     	    android:layout_width="match_parent"
     	    android:layout_height="wrap_content" >
 	    	<TextView
+	    	    android:id="@+id/horeca_distance_label"
+	    	    android:text="@string/horeca_distance_label"
+	    	    android:textIsSelectable="true"
+	       		android:layout_width="wrap_content"
+	       		android:layout_height="wrap_content"
+	       		android:layout_alignParentLeft="true"
+	       		style="@style/simple_text" />
+	    	<TextView
+	    	    android:id="@+id/horeca_distance"
+	    	    android:textIsSelectable="true"
+	       		android:layout_width="wrap_content"
+	       		android:layout_height="wrap_content"
+	       		android:layout_toRightOf="@id/horeca_distance_label"
+	       		style="@style/simple_text" />
+    	</RelativeLayout>
+    	<RelativeLayout
+    	    android:layout_width="match_parent"
+    	    android:layout_height="wrap_content" >
+	    	<TextView
 	    	    android:id="@+id/horeca_numtel_label"
 	    	    android:text="@string/horeca_numtel_label"
 	    	    android:textIsSelectable="true"
