--- a/res/layout/activity_signin.xml
+++ b/res/layout/activity_signin.xml
@@ -18,7 +18,7 @@
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
 	        style="@style/simple_text" />
-	    <Spinner
+	    <EditText
 	        android:id="@+id/mail"
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
@@ -28,7 +28,7 @@
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
 	        style="@style/simple_text" />
-	    <Spinner
+	    <EditText
 	        android:id="@+id/mot_de_passe"
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
