--- a/res/layout/presentation_view.xml
+++ b/res/layout/presentation_view.xml
@@ -78,10 +78,11 @@
 	       		android:gravity="bottom"
 	       		style="@style/simple_text" />
 	    	<ImageButton
+	    	    android:contentDescription="favorite"
 	    	    android:id="@+id/favorite"
 		        android:layout_width="wrap_content"
 		        android:layout_height="fill_parent"
-		        android:src="@drawable/star"
+		        android:src="@drawable/star_off"
 		        android:background="#00ffffff"
 		        android:onClick="onToggleStar"/>
     	</LinearLayout>
