Improve signin/signup #1

--- a/res/layout/activity_signin.xml
+++ b/res/layout/activity_signin.xml
@@ -33,5 +33,11 @@
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
 	        style="@style/simple_text" />
-	    </LinearLayout>
+	    <Button
+	        android:id="@+id/sign_in_button"
+	        android:text="@string/sign_in_button"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        style="@style/simple_text"/>
+	</LinearLayout>
 </ScrollView>
