--- a/res/layout/activity_signup.xml
+++ b/res/layout/activity_signup.xml
@@ -33,6 +33,28 @@
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
 	        style="@style/simple_text" />
+	     <TextView
+	        android:text="@string/name"
+	        android:textIsSelectable="true"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        style="@style/simple_text" />
+	    <EditText
+	        android:id="@+id/name"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        style="@style/simple_text" />
+	    <TextView
+	        android:text="@string/password_confirmation"
+	        android:textIsSelectable="true"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        style="@style/simple_text" />
+	    <EditText
+	        android:id="@+id/password_confirmation"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        style="@style/simple_text" />
 	    <Button
 	        android:id="@+id/sign_up_button"
 	        android:text="@string/sign_up_button"
