--- a/res/layout/activity_signup.xml
+++ b/res/layout/activity_signup.xml
@@ -12,16 +12,25 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
+        
 	    <TextView 
 	        android:text="@string/mail"
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
-	        style="@style/simple_text"/>
+	        style="@style/simple_text" />
 	    <EditText
 	        android:id="@+id/mail"
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
 	        style="@style/simple_text" />
+	    <TextView
+	        android:textIsSelectable="true"
+	        android:id="@+id/mail_err"
+	        android:text="@string/mail_taken"
+	        android:visibility="gone"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        style="@style/error_text" />
 	    <TextView
 	        android:text="@string/name"
 	        android:textIsSelectable="true"
@@ -55,11 +64,21 @@
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
 	        style="@style/simple_text" />
+	   <TextView
+	        android:textIsSelectable="true"
+	        android:id="@+id/password_err"
+	        android:text="@string/wrong_password_confirmation"
+	        android:visibility="gone"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        style="@style/error_text" />
+	    
 	    <Button
 	        android:id="@+id/sign_up_button"
 	        android:text="@string/sign_up_button"
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
 	        style="@style/simple_text"/>
+	    
 </LinearLayout>
 </ScrollView>
