--- a/res/layout/activity_plat.xml
+++ b/res/layout/activity_plat.xml
@@ -95,15 +95,19 @@
 	      		android:layout_height="wrap_content"
 	      		style="@style/simple_text" />
 	   	<View
+	   	    android:id="@+id/commande_sep"
+	   	    android:visibility="gone"
 	   	    android:layout_width="match_parent"
 	   		android:layout_height="2dip"
 	   		android:background="#FF909090" />
 	   	<DatePicker
 	   	    android:id="@+id/commande_date"
+	   	    android:visibility="gone"
 	   	    android:layout_width="fill_parent"
 	   	    android:layout_height="wrap_content" />
 	    	<TimePicker
 	   	    android:id="@+id/commande_time"
+	   	    android:visibility="gone"
 	   	    android:layout_width="fill_parent"
 	   	    android:layout_height="wrap_content" />
 	   	<RelativeLayout
@@ -111,6 +115,7 @@
 	   	    android:layout_height="wrap_content" >
 	    	<TextView
 	    	    android:id="@+id/commande_nombre_label"
+	    	    android:visibility="gone"
 	   	    	android:text="@string/commande_nombre_label"
 	   	    	android:textIsSelectable="true"
 		        android:layout_width="wrap_content"
@@ -119,6 +124,7 @@
 		      	style="@style/simple_text" />
 		   	<EditText
 		   	    android:id="@+id/commande_nombre"
+		   	    android:visibility="gone"
 		   	    android:text="@string/default_commande_nombre"
 		      	android:layout_width="wrap_content"
 		      	android:layout_height="wrap_content"
@@ -128,11 +134,13 @@
 	   	</RelativeLayout>
 	   	<Button
 	   	    android:id="@+id/commande_button"
+	   	    android:visibility="gone"
 	   	    android:layout_width="fill_parent"
 	   	    android:layout_height="wrap_content"
 	   	    android:text="@string/commande_button_label" />
 	   	<Button
 	   	    android:id="@+id/current_commandes_button"
+	   	    android:visibility="gone"
 	   	    android:layout_width="fill_parent"
 	   	    android:layout_height="wrap_content"
 	   	    android:text="@string/current_commandes_button_label" />
