--- a/res/layout/activity_ouverture.xml
+++ b/res/layout/activity_ouverture.xml
@@ -56,6 +56,8 @@
 	      	style="@style/simple_text" />
    	</RelativeLayout>
    	<RelativeLayout
+   	    android:id="@+id/reservation_layout"
+   	    android:visibility="gone"
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content" >
    	    <TextView
@@ -84,6 +86,7 @@
    	</RelativeLayout>
    	<RelativeLayout
    	    android:id="@+id/current_reservation_layout"
+   	    android:visibility="gone"
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content" >
    	    <TextView
