--- a/res/layout/activity_signin.xml
+++ b/res/layout/activity_signin.xml
@@ -38,6 +38,7 @@
 	        android:layout_height="wrap_content"
 	        style="@style/simple_text" />
 	    <EditText
+	        android:inputType="textPassword"
 	        android:id="@+id/mot_de_passe"
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
