--- a/res/layout/horeca_item.xml
+++ b/res/layout/horeca_item.xml
@@ -2,16 +2,32 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal" >
-   	<TextView
-   	    android:id="@+id/horeca_item_name"
-   	    android:textIsSelectable="true"
-   	    android:layout_width="wrap_content"
-   	    android:layout_height="wrap_content"/>
-   	<TextView
-   	    android:id="@+id/horeca_item_distance"
-   	    android:textIsSelectable="true"
-   	    android:layout_width="wrap_content"
-   	    android:layout_height="wrap_content"/>
+    android:layout_height="wrap_content"
+    android:orientation="vertical" >
+   	<View
+		android:layout_width="match_parent"
+	   	android:layout_height="8dip"
+	   	android:background="#FFFFFFFF" />
+	<RelativeLayout
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content" >
+	   	<TextView
+	   	    android:id="@+id/horeca_item_name"
+	   	    android:textIsSelectable="true"
+	   	    android:layout_width="wrap_content"
+	   	    android:layout_height="wrap_content"
+	   	    android:layout_alignParentLeft="true"
+	   	    style="@style/item_text"/>
+	   	<TextView
+	   	    android:id="@+id/horeca_item_distance"
+	   	    android:textIsSelectable="true"
+	   	    android:layout_width="wrap_content"
+	   	    android:layout_height="wrap_content"
+	   	    android:layout_alignParentRight="true"
+	   	    style="@style/item_text"/>
+	</RelativeLayout>
+   	<View
+   	    android:layout_width="match_parent"
+	   	android:layout_height="8dip"
+	   	android:background="#FFFFFFFF" />
 </LinearLayout>
