--- a/res/layout/presentation_view.xml
+++ b/res/layout/presentation_view.xml
@@ -78,7 +78,7 @@
 	       		android:gravity="bottom"
 	       		style="@style/simple_text" />
 	    	<ImageButton
-	    	    android:contentDescription="favorite"
+	    	    android:contentDescription="@string/horeca_favorite_description"
 	    	    android:id="@+id/favorite"
 		        android:layout_width="wrap_content"
 		        android:layout_height="fill_parent"
