--- a/res/layout/activity_changepassword.xml
+++ b/res/layout/activity_changepassword.xml
@@ -25,6 +25,14 @@
 	        android:layout_height="wrap_content"
 	        style="@style/simple_text" />
 	    <TextView
+	        android:textIsSelectable="true"
+	        android:id="@+id/password_err2"
+	        android:visibility="gone"
+	    	android:text="@string/wrong_password"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        style="@style/error_text" />
+	    <TextView
 	        android:text="@string/nouveau_mdp"
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
@@ -46,12 +54,6 @@
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
 	        style="@style/simple_text" />
-	    <Button
-	        android:id="@+id/change_pass_button"
-	        android:text="@string/change_pass_button"
-	        android:layout_width="match_parent"
-	        android:layout_height="wrap_content"
-	        style="@style/simple_text"/>
 	    <TextView
 	        android:textIsSelectable="true"
 	        android:id="@+id/password_err"
@@ -60,5 +62,12 @@
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
 	        style="@style/error_text" />
+	    <Button
+	        android:id="@+id/change_pass_button"
+	        android:text="@string/change_pass_button"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        style="@style/simple_text"/>
+	    
 	   </LinearLayout>
 </ScrollView>
