--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -96,6 +96,13 @@
 	        android:id="@+id/button_choose_horeca"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
-	        android:text="@string/button_choose_horeca" />
+	        android:text="@string/button_choose_horeca"
+	        style="@style/simple_text" />
+	    <TextView
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:textIsSelectable="true"
+	        android:text="@string/asterics_explanation"
+	        style="@style/simple_text" />
 	</LinearLayout>
 </ScrollView>
