Many small changes
Add a horaires field to restaurant to say like (opened every friday
from ... to ...).
Change tabs icon.
Add a limit of 30 to the number of restaurants fetched by Filter

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -19,6 +19,7 @@
 	        style="@style/simple_text" />
 	    <Spinner
 	        android:id="@+id/ville_spinner"
+	        android:prompt="@string/horecatype_prompt"
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
 	        style="@style/simple_text" />
@@ -40,6 +41,7 @@
 	        style="@style/simple_text" />
 	    <Spinner
 	        android:id="@+id/plattype"
+	        android:prompt="@string/plattype_prompt"
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
 	        style="@style/simple_text" />
