ProfileActivity with information + SignUp with Address

--- a/res/layout/activity_signup.xml
+++ b/res/layout/activity_signup.xml
@@ -43,6 +43,16 @@
 	        android:layout_height="wrap_content"
 	        style="@style/simple_text" />
 	    <TextView
+	        android:text="@string/address"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        style="@style/simple_text" />
+	    <EditText
+	        android:id="@+id/address"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        style="@style/simple_text" />
+	    <TextView
 	        android:text="@string/mot_de_passe"
 	        android:textIsSelectable="true"
 	        android:layout_width="match_parent"
