--- a/res/layout/activity_profile.xml
+++ b/res/layout/activity_profile.xml
@@ -12,7 +12,24 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
-	    
+       <TextView 
+           android:textIsSelectable="true"
+            android:id="@+id/show_name"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        style="@style/simple_text" />
+	    <TextView 
+           android:textIsSelectable="true"
+            android:id="@+id/show_mail"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        style="@style/simple_text" />
+	    <TextView 
+           android:textIsSelectable="true"
+            android:id="@+id/show_address"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        style="@style/simple_text" />
 	    
 	    <Button
 	        android:id="@+id/Change_psw"
