Fix Villes not appearing in SignUp
db.close(); must be done after setAdapter !!!

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
 	        style="@style/simple_text" />
 	    <Spinner
 	        android:id="@+id/ville_spinner"
-	        android:prompt="@string/horecatype_prompt"
+	        android:prompt="@string/ville_prompt"
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
 	        style="@style/simple_text" />
