--- a/res/layout/activity_signup.xml
+++ b/res/layout/activity_signup.xml
@@ -59,6 +59,7 @@
 	        style="@style/simple_text" />
 	    <Spinner
 	        android:id="@+id/ville_spinner_2"
+	       	android:prompt="@string/ville_prompt"
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
 	        style="@style/simple_text" />
