--- a/res/layout/activity_profile.xml
+++ b/res/layout/activity_profile.xml
@@ -28,7 +28,7 @@
 	       		android:layout_width="wrap_content"
 	       		android:layout_height="wrap_content"
 	       		android:layout_alignParentRight="true"
-	       		android:layout_below="@id/horeca_name"
+	       		android:layout_below="@id/show_name"
 	       		style="@style/simple_text" />
 	   	</RelativeLayout>
 	   	<View
