--- a/res/layout/plat_item.xml
+++ b/res/layout/plat_item.xml
@@ -17,11 +17,13 @@
 	   	    android:layout_height="wrap_content"
 	   	    android:layout_alignParentLeft="true"
 	   	    style="@style/item_text"/>
+	   	<!-- Avoid overlapping with background -->
 	   	<TextView
 	   	    android:id="@+id/plat_item_price"
 	   	    android:layout_width="wrap_content"
 	   	    android:layout_height="wrap_content"
 	   	    android:layout_alignParentRight="true"
+	   	    android:background="@color/white"
 	   	    style="@style/item_text"/>
 	</RelativeLayout>
    	<View
