--- a/res/layout/activity_plat.xml
+++ b/res/layout/activity_plat.xml
@@ -132,6 +132,28 @@
 		      	android:inputType="number"
 		      	style="@style/simple_text" />
 	   	</RelativeLayout>
+	   	<LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+		   	<TextView
+	    	    android:id="@+id/plat_is_favorite"
+	    	    android:text="@string/plat_is_favorite"
+	    	    android:textIsSelectable="false"
+	       		android:layout_width="wrap_content"
+	       		android:layout_height="43dp"
+	       		android:textColor="#000000"
+	       		android:gravity="bottom"
+	       		style="@style/simple_text" />
+	    	<ImageButton
+	    	    android:contentDescription="@string/plat_favorite_description"
+	    	    android:id="@+id/favorite"
+		        android:layout_width="wrap_content"
+		        android:layout_height="fill_parent"
+		        android:src="@drawable/star_off"
+		        android:background="#00ffffff"
+		        android:onClick="onToggleStar"/>
+		</LinearLayout>
 	   	<Button
 	   	    android:id="@+id/commande_button"
 	   	    android:visibility="gone"
