Ajout d'une fonctionnalité pour changer d'image avec un glissement de doigt droite/gauche et inversent Changements mineurs pour les labels

--- a/res/layout/label_horeca_view.xml
+++ b/res/layout/label_horeca_view.xml
@@ -4,6 +4,14 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
+    <TextView
+        android:id="@+id/labelname"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.11"
+        android:text="Large Text"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
     <ImageView
         android:id="@+id/imageView1"
         android:layout_width="match_parent"
