--- a/res/layout/label_horeca_view.xml
+++ b/res/layout/label_horeca_view.xml
@@ -17,7 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_weight="0.40"
-        android:src="@drawable/defaulthorecapicture" />
+        android:src="@drawable/nowifi" />
 
     <TextView
         android:id="@+id/descriptionLabel"
